# kuro-viewer

./: .biomeignore  .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  STYLING_GUIDE.md  TODO.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: main.py  metadata_utils.py  pyproject.toml  requirements.txt  scorers.py  test_metadata.py
docs/: STYLE_GUIDE.md
frontend/: App.tsx  index.html  metadata.json  package-lock.json  package.json  types.ts
frontend/components/: Button.tsx  ImageViewer.tsx  MetadataModal.tsx  SettingsModal.tsx  ThumbnailStrip.tsx  Toolbar.tsx
ref_generic/: .biomeignore  AGENTS.md  package.json  pyproject.toml
src/: App.tsx  index.css  index.tsx  metadata.json  types.ts
src/components/: Button.tsx  ImageViewer.tsx  MetadataModal.tsx  SettingsModal.tsx  ThumbnailStrip.tsx  Toolbar.tsx
src/components/settings/: SettingsModal.tsx
src/components/settings/tabs/: AppearanceTab.tsx  CategoryStub.tsx  GeneralTab.tsx  LayoutTab.tsx
src/components/settings/ui/: SettingGroup.tsx  SettingRow.tsx  SettingToggle.tsx
src/components/ui/: Button.tsx
src/styles/: design-system.css
